// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group page should match snapshot 1`] = `
<div>
  <div
    class="App"
  >
    <nav
      class="headerBar navbar navbar-expand-md navbar-light bg-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
          role="presentation"
        >
          Team20
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
        >
          <div
            class="me-auto navbar-nav"
          />
          <div
            class="hstack gap-2"
          >
            <span
              class="navbar-text"
            />
          </div>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Groups page should match snapshot 1`] = `
<div>
  <div
    class="App"
  >
    <nav
      class="headerBar navbar navbar-expand-md navbar-light bg-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
          role="presentation"
        >
          Team20
        </span>
        <button
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="navbar-collapse collapse"
        >
          <div
            class="me-auto navbar-nav"
          />
          <div
            class="hstack gap-2"
          >
            <span
              class="navbar-text"
            />
          </div>
        </div>
      </div>
    </nav>
    <div
      class="App container"
    >
      <div
        class="mainContent vstack gap-5"
      >
        <div
          class="groupButtons row"
        >
          <div
            class="col-4"
          >
            <button
              class="btn btn-secondary"
              type="button"
            >
              My Groups
            </button>
          </div>
          <div
            class="col-4"
          >
            <button
              class="btn btn-secondary"
              type="button"
            >
              Public Groups
            </button>
          </div>
          <div
            class="col-4"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Create Group
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="vstack gap-5"
            id="groupList"
          />
        </div>
        <div
          class="row"
        >
          <div
            class="ms-auto"
          >
            <form
              class=""
            >
              <div
                class="mb-3 row"
              >
                <div
                  class="col-2"
                >
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    Filter by Tag
                  </button>
                </div>
                <div
                  class="col-2"
                >
                  <input
                    class="form-control"
                    id="tagField"
                    placeholder="Tag"
                  />
                </div>
                <div
                  class="ms-auto col-4"
                >
                  <div
                    class="dropdown"
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-primary"
                      type="button"
                    >
                      Sort Groups
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
